# project-x

./: Makefile  main.py  pyproject.toml  transacoes_visa.edi  transacoes_visa_mcc.adi
checktax/edi/: __init__.py
checktax/rules/: __init__.py  mcc_5812.py
visa_mcc_module/: __init__.py  edi_parser.py  mcc_4121.py  mcc_5411.py  mcc_5812.py  mcc_5813.py  mcc_5814.py
